--- a/site/output/blob-storage.html
+++ b/site/output/blob-storage.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -111,11 +111,10 @@ A bucket has
 </p>
 
 <ul>
-  <li>a <strong>name</strong>;</li>
+<li>a <strong>name</strong>;</li>
   <li>a <strong>size</strong> (denotes the number of blobs it contains); and</li>
   <li>a list of <strong>links to each blob</strong>.</li>
 </ul>
-
 <p>
 A blob has:
 </p>
@@ -124,7 +123,7 @@ A blob has:
   <div class="span3">
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     REST API
   </li>
   <li><a href="rest-api.html">Introduction</a></li>
@@ -132,30 +131,27 @@ A blob has:
   <li><a href="compute-resources.html">Compute resources</a></li>
   <li><a href="storage-resources.html">Storage resources</a></li>
   <ul class="nav nav-list">
-    <li><a href="storage-resources.html#volumes">Storage volumes</a></li>
+<li><a href="storage-resources.html#volumes">Storage volumes</a></li>
     <li><a href="storage-snapshots.html">Storage snaphots</a></li>
     <li class="active"><a href="#blob">Blob storage</a></li>
   </ul>
 </ul>
-
-  </div>
+</div>
 </div>
 
 <ul>
-  <li>a <strong>content_length</strong>;</li>
+<li>a <strong>content_length</strong>;</li>
   <li>a <strong>content_type</strong>;</li>
   <li>a <strong>last_modified</strong> timestamp;</li>
   <li>a structure containing <strong>user_metadata</strong>;</li>
   <li>a link to the blob <strong>content</strong>; and</li>
   <li>a name of the bucket in which this blob exists.</li>
-</ul>
-
-<p><br></p>
+</ul><p><br></p>
 
 <div class="tabbable">
 
 <ul class="nav nav-pills">
-  <li class="active"><a href="#tab1" data-toggle="tab">Get a list of all buckets</a></li>
+<li class="active"><a href="#tab1" data-toggle="tab">Get a list of all buckets</a></li>
   <li><a href="#tab2" data-toggle="tab">Get the details of a bucket</a></li>
   <li><a href="#tab3" data-toggle="tab">Create/delete a bucket</a></li>
   <li><a href="#tab4" data-toggle="tab">Get the details of a blob</a></li>
@@ -163,9 +159,7 @@ A blob has:
   <li>   </li>
   <li><a href="#tab6" data-toggle="tab">Get/update blob metadata</a></li>
 </ul>
-
 <hr>
-
 <div class="tab-content">
   <div class="tab-pane tab-fade active" id="tab1">
 
@@ -591,7 +585,6 @@ X-Deltacloud-Blobmeta-paint: Stannite_Grey
 </div>
 </div>
 </div>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
