--- a/site/output/cimi-curl.html
+++ b/site/output/cimi-curl.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -106,7 +106,7 @@
     <p> The <a href="http://curl.haxx.se/docs/">cURL documentation</a> is pretty comprehensive, but the following are some general points to remember for using cURL against the Deltacloud CIMI frontend. All the examples on this page assume the Deltacloud server is running at localhost:3001: </p>
 
   <ul>
-    <li>
+<li>
       Credentials are specified with <strong> --user "name:password"  </strong>
     </li>
     <li>
@@ -119,8 +119,7 @@
       The <strong> -i </strong> flag will show you the response headers and the <strong> -v </strong> flag will show you request and response headers as well as info about cURL activity:
     </li>
   </ul>
-
-      <pre>
+<pre>
 curl -v -X DELETE --user "username:password" -H "Accept: application/xml" http://localhost:3001/cimi/machine_images/my_image
       </pre>
 
@@ -133,21 +132,19 @@ Select a CIMI resource from the right-hand navigation bar to see cURL examples f
   <div class="span4">
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
       <a href="cimi-curl.html">curl for CIMI Resources</a>
   </li>
   <ul class="nav nav-list">
-    <li><a href="cimi-curl/cimi-curl-machines.html">Machine</a></li>
+<li><a href="cimi-curl/cimi-curl-machines.html">Machine</a></li>
     <li><a href="cimi-curl/cimi-curl-volumes.html">Volume</a></li>
     <li><a href="cimi-curl/cimi-curl-resource_metadata.html">ResourceMetadata</a></li>
   </ul>
-  <br>
+<br>
 </ul>
-
-  </div>
-
 </div>
 
+</div>
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
