--- a/site/output/compute-resources.html
+++ b/site/output/compute-resources.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -122,14 +122,14 @@ To list all realms use call <strong>GET /api/realms</strong>. You can filter the
   <div class="span3">
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     REST API
   </li>
   <li><a href="rest-api.html">Introduction</a></li>
   <li><a href="api-entry-point.html">API entry point</a></li>
   <li class="active"><a href="compute-resources.html">Compute resources</a></li>
   <ul class="nav nav-list">
-    <li><a href="#realms">Realms</a></li>
+<li><a href="#realms">Realms</a></li>
     <li><a href="hardware-profiles.html">Hardware profiles</a></li>
     <li><a href="images.html">Images</a></li>
     <li><a href="instance-states.html">Instance states</a></li>
@@ -139,10 +139,9 @@ To list all realms use call <strong>GET /api/realms</strong>. You can filter the
     <li><a href="addresses.html">Addresses</a></li>
     <li><a href="load-balancers.html">Load balancers</a></li>
   </ul>
-  <li><a href="storage-resources.html">Storage resources</a></li>
+<li><a href="storage-resources.html">Storage resources</a></li>
 </ul>
-
-  </div>
+</div>
 </div>
 
 <p>Example request:</p>
@@ -220,7 +219,6 @@ Content-Length: 182
 <p><a class="btn btn-inverse btn-large" style="float: right" href="hardware-profiles.html">Hardware profiles <i class="icon-arrow-right icon-white" style="vertical-align:baseline"> </i></a></p>
 
 <p><br></p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
