--- a/site/output/hardware-profiles.html
+++ b/site/output/hardware-profiles.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -111,14 +111,13 @@ Since clouds differ sharply in how virtual machine sizing is represented and inf
 </p>
 
 <ul>
-  <li>size is <strong>fixed</strong> in the dimension, for example instances all have 2GB of memory;</li>
+<li>size is <strong>fixed</strong> in the dimension, for example instances all have 2GB of memory;</li>
   <li>size can vary within some <strong>range</strong>, for example instances can have from 1GB to 4GB of memory;
   </li>
   <li>
   size can be chosen from a predefined set of values - an <strong>enumeration</strong>, for example instances can have 512 MB, 1 GB or 4GB of memory.
   </li>
 </ul>
-
 <p>
 When creating a new instance, a client must specify the hardware profile on which the instance is based.
 </p>
@@ -131,14 +130,14 @@ In addition to the sizing constraints, a hardware profile may also indicate the 
   <div class="span3">
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     REST API
   </li>
   <li><a href="rest-api.html">Introduction</a></li>
   <li><a href="api-entry-point.html">API entry point</a></li>
   <li><a href="compute-resources.html">Compute resources</a></li>
   <ul class="nav nav-list">
-    <li><a href="compute-resources.html#realms">Realms</a></li>
+<li><a href="compute-resources.html#realms">Realms</a></li>
     <li class="active"><a href="#hardware">Hardware profiles</a></li>
     <li><a href="images.html">Images</a></li>
     <li><a href="instance-states.html">Instance states</a></li>
@@ -148,10 +147,9 @@ In addition to the sizing constraints, a hardware profile may also indicate the 
     <li><a href="addresses.html">Addresses</a></li>
     <li><a href="load-balancers.html">Load balancers</a></li>
   </ul>
-  <li><a href="storage-resources.html">Storage resources</a></li>
+<li><a href="storage-resources.html">Storage resources</a></li>
 </ul>
-
-  </div>
+</div>
 </div>
 
 <p style="margin-top:0px">
@@ -302,7 +300,6 @@ Content-Length: 808
 <p><a class="btn btn-inverse btn-large" style="float: right" href="images.html">Images <i class="icon-arrow-right icon-white" style="vertical-align:baseline"> </i></a></p>
 
 <p><br></p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
