--- a/site/output/install-deltacloud.html
+++ b/site/output/install-deltacloud.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -100,7 +100,7 @@
 <p>First of all, you have to install several dependecies. The Deltacloud server relies on a number of external rubygems and other libraries. The following packages are neccessary for running the Deltacloud server. The installation of dependencies slightly differs from distribution to distribution. You will need:</p>
 
 <ul>
-  <li>
+<li>
   ruby and ruby-devel,
   </li>
   <li>
@@ -121,9 +121,7 @@
   <li>
   rake
   </li>
-</ul>
-
-<p><br></p>
+</ul><p><br></p>
 
 <h3>Fedora and Red Hat Enterprise Linux</h3>
 
@@ -248,7 +246,6 @@ the Wiki</a>. Note that they require using homebrew.</p>
 <p><a class="btn btn-inverse btn-large" style="float: right" href="run-deltacloud-server.html">Run Deltacloud</a></p>
 
 <p><br></p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
