--- a/site/output/keys.html
+++ b/site/output/keys.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -107,10 +107,9 @@ A key captures the credentials required to access an Instance. The Deltacloud AP
 </p>
 
 <ul>
-  <li>the <strong>password</strong> with username and password attributes</li>
+<li>the <strong>password</strong> with username and password attributes</li>
   <li>the <strong>key</strong> with fingerprint and pem (private key) attributes (public/private keypair)</li>
 </ul>
-
 <p>
 The key type is determined by the back-end cloud provider.
 </p>
@@ -131,14 +130,14 @@ The Rackspace cloud also reports credentials during instance creation though it 
   <div class="span3">
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     REST API
   </li>
   <li><a href="rest-api.html">Introduction</a></li>
   <li><a href="api-entry-point.html">API entry point</a></li>
   <li><a href="compute-resources.html">Compute resources</a></li>
   <ul class="nav nav-list">
-    <li><a href="compute-resources.html">Realms</a></li>
+<li><a href="compute-resources.html">Realms</a></li>
     <li><a href="hardware-profiles.html">Hardware profiles</a></li>
     <li><a href="images.html">Images</a></li>
     <li><a href="instance-states.html">Instance states</a></li>
@@ -148,21 +147,16 @@ The Rackspace cloud also reports credentials during instance creation though it 
     <li><a href="addresses.html">Addresses</a></li>
     <li><a href="load-balancers.html">Load balancers</a></li>
   </ul>
-  <li><a href="storage-resources.html">Storage resources</a></li>
+<li><a href="storage-resources.html">Storage resources</a></li>
 </ul>
-
-  </div>
+</div>
 </div>
 
 <ul class="nav nav-pills">
-  <li class="active"><a href="#tab1" data-toggle="tab">Get a list of all keys</a></li>
+<li class="active"><a href="#tab1" data-toggle="tab">Get a list of all keys</a></li>
   <li><a href="#tab2" data-toggle="tab">Get the description of a key</a></li>
   <li><a href="#tab3" data-toggle="tab">Create/delete a key</a></li>
-</ul>
-
-<hr>
-
-<div class="tab-content">
+</ul><hr><div class="tab-content">
   <div class="tab-pane active" id="tab1">
   
 <h4 id="get">Get a list of all keys</h4>
@@ -349,7 +343,6 @@ Date: Tue, 26 Jul 2011 10:18:38 GMT
 <p><a class="btn btn-inverse btn-large" style="float: right" href="firewalls.html">Firewalls <i class="icon-arrow-right icon-white" style="vertical-align:baseline"> </i></a></p>
 
 <p><br></p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
