--- a/site/output/ruby-client.html
+++ b/site/output/ruby-client.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -117,7 +117,7 @@ puts instance.hardware_profile.architecture
   <div class="span4">
   
 <ul class="nav nav-list well">
-  <li class="nav-header">Deltacloud Ruby Client</li>
+<li class="nav-header">Deltacloud Ruby Client</li>
   <li class="active"><a href="#realms">Listing realms</a></li>
   <li><a href="#profiles">Listing hardware profiles</a></li>
   <li><a href="#images">Listing images</a></li>
@@ -126,8 +126,7 @@ puts instance.hardware_profile.architecture
   <li><a href="#instances3">Manipulating instances</a></li>
   <li><a href="http://deltacloud.apache.org/ruby-client/doc/index.html">Client documentation</a></li>
 </ul>
-
-  </div>
+</div>
 </div>
 
 <p>You can access a specific realm by adding its identifier:</p>
@@ -219,7 +218,6 @@ puts instance.hardware_profile.architecture
 <p><a class="btn btn-inverse btn-large" style="float: right" href="usage.html#clients"><i class="icon-arrow-left icon-white" style="vertical-align:baseline"> </i> Back</a></p>
 
 <p><br></p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
