--- a/site/output/run-deltacloud-server.html
+++ b/site/output/run-deltacloud-server.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -179,7 +179,6 @@ The browser will ask for credentials. To log in use mockuser and mockpassword as
 <p><a class="btn btn-inverse btn-large" style="float: right" href="usage.html">Use Deltacloud</a></p>
 
 <p><br></p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
