--- a/site/output/storage-snapshots.html
+++ b/site/output/storage-snapshots.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -107,26 +107,20 @@ A storage snapshot captures the state of a storage volume at the exact moment in
 </p>
 
 <ul>
-  <li>a <strong>created timestamp</strong>; and</li>
+<li>a <strong>created timestamp</strong>; and</li>
   <li>a <strong>storage volume </strong>attribute referring to the volume from which the snapshot was made.</li>
 </ul>
-
-<br>
-<br>
-
-<ul class="nav nav-pills">
-  <li class="active"><a href="#tab1" data-toggle="tab">Get a list of all snapshots</a></li>
+<br><br><ul class="nav nav-pills">
+<li class="active"><a href="#tab1" data-toggle="tab">Get a list of all snapshots</a></li>
   <li><a href="#tab2" data-toggle="tab">Get the details of a snapshot</a></li>
   <li><a href="#tab3" data-toggle="tab">Create/delete a snapshot</a></li>
 </ul>
-
 <hr>
-
-  </div>
+</div>
   <div class="span3">
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     REST API
   </li>
   <li><a href="rest-api.html">Introduction</a></li>
@@ -134,13 +128,12 @@ A storage snapshot captures the state of a storage volume at the exact moment in
   <li><a href="compute-resources.html">Compute resources</a></li>
   <li><a href="storage-resources.html">Storage resources</a></li>
   <ul class="nav nav-list">
-    <li><a href="storage-resources.html#volumes">Storage volumes</a></li>
+<li><a href="storage-resources.html#volumes">Storage volumes</a></li>
     <li class="active"><a href="#snapshots">Storage snapshots</a></li>
     <li><a href="blob-storage.html">Blob storage</a></li>
   </ul>
 </ul>
-
-  </div>
+</div>
 </div>
 
 <div class="tab-content">
@@ -298,7 +291,6 @@ Date: Thu, 28 Jul 2011 22:26:07 GMT
 <p><a class="btn btn-inverse btn-large" style="float: right" href="blob-storage.html">Blob storage <i class="icon-arrow-right icon-white" style="vertical-align:baseline"> </i></a></p>
 
 <p><br></p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
