--- a/site/output/usage.html
+++ b/site/output/usage.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -153,10 +153,7 @@ openstack = client.with_config(:driver =&gt; :openstack)
 
 <a class="btn btn-inverse btn-large" style="float: right" href="ruby-client.html">Work with the Ruby client</a>
 
-<br>
-<br>
-
-<h3>HTTP clients - cURL</h3>
+<br><br><h3>HTTP clients - cURL</h3>
 
 <p>
 Basically, you interact with the Deltacloud server via HTTP calls, so you can use any HTTP client to talk to Deltacloud using the <a href="rest-api.html">Deltacloud REST API</a>.
@@ -225,10 +222,7 @@ The <strong>'-iv'</strong> flags will ensure that cURL displays the request and 
 
 <a class="btn btn-inverse btn-large" style="float: right" href="curl-examples.html">Working with cURL</a>
 
-<br>
-<br>
-
-<h3>Libdeltacloud Client (C library)</h3>
+<br><br><h3>Libdeltacloud Client (C library)</h3>
 <p>
 Libdeltacloud is a C/C++ library for accessing the Deltacloud API. It exports convenient structures and functions for manipulating cloud objects through the Deltacloud API.
 </p>
@@ -249,8 +243,6 @@ Due to the magic of libtool versioning, programs built against an older version 
 <a class="btn btn-inverse btn-large" style="float: right" href="http://deltacloud.apache.org/libdeltacloud/index.html">Libdeltacloud documentation</a>
 
 <br>
-
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
