--- a/site/output/cimi-curl/cimi-curl-resource_metadata.html
+++ b/site/output/cimi-curl/cimi-curl-resource_metadata.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -108,18 +108,17 @@
   <div class="span4">
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     <a href="../cimi-curl.html">curl for CIMI Resources</a>
   </li>
   <ul class="nav nav-list">
-    <li><a href="cimi-curl-machines.html">Machine</a></li>
+<li><a href="cimi-curl-machines.html">Machine</a></li>
     <li><a href="cimi-curl-volumes.html">Volume</a></li>
     <li class="active"><a href="cimi-curl-resource_metadata.html">ResourceMetadata</a></li>
   </ul>
-  <br>
+<br>
 </ul>
-
-  </div>
+</div>
 
 </div>
 
@@ -134,8 +133,6 @@
   <p> Retrieve the Resource Metadata as it corresponding to the Machine resource, in xml format:</p>
 
   <pre>curl -v --user "mockuser:mockpassword" -H "Accept: application/xml" http://localhost:3001/cimi/resource_metadata/machine </pre>
-
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
