--- a/site/output/cimi-curl/cimi-curl-volumes.html
+++ b/site/output/cimi-curl/cimi-curl-volumes.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -104,30 +104,27 @@
     <h3 id="command">cURL examples for CIMI Volume resources</h3>
 
 <ul class="nav nav-pills">
-  <li class="active"><a href="#volumes" data-toggle="tab">Working with Volumes</a></li>
+<li class="active"><a href="#volumes" data-toggle="tab">Working with Volumes</a></li>
   <li><a href="#volume-images" data-toggle="tab">Working with VolumeImages</a></li>
   <li><a href="#volume-configs" data-toggle="tab">Working with VolumeConfigurations</a></li>
   <li><a href="#volume-templates" data-toggle="tab">Working with VolumeTemplates</a></li>
 </ul>
-
-
-  </div>
+</div>
 
   <div class="span4">
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     <a href="../cimi-curl.html">curl for CIMI Resources</a>
   </li>
   <ul class="nav nav-list">
-    <li><a href="cimi-curl-machines.html">Machine</a></li>
+<li><a href="cimi-curl-machines.html">Machine</a></li>
     <li class="active"><a href="cimi-curl-volumes.html">Volume</a></li>
     <li><a href="cimi-curl-resource_metadata.html">ResourceMetadata</a></li>
   </ul>
-  <br>
+<br>
 </ul>
-
-  </div>
+</div>
 
 </div>
 
@@ -136,8 +133,7 @@
   <div class="tab-pane active" id="volumes">
 
     <hr>
-
-    <h4>Working with Volumes</h4>
+<h4>Working with Volumes</h4>
 
     <p>Retrieve the Volume Collection in json format:</p>
 
@@ -177,8 +173,7 @@
   <div class="tab-pane" id="volume-images">
 
     <hr>
-
-    <h4>Working with Volume Images</h4>
+<h4>Working with Volume Images</h4>
 
     <p>Retrieve the Volume Image Collection in xml format:</p>
 
@@ -207,8 +202,7 @@
   <div class="tab-pane" id="volume-configs">
 
     <hr>
-
-    <h4>Working with Volume Configurations</h4>
+<h4>Working with Volume Configurations</h4>
 
     <p>Retrieve the Volume Configuration Collection in json format:</p>
 
@@ -237,8 +231,7 @@
   <div class="tab-pane" id="volume-templates">
 
     <hr>
-
-    <h4>Working with Volume Templates</h4>
+<h4>Working with Volume Templates</h4>
 
     <p>Retrieve the Volume Template Collection in json format:</p>
 
@@ -262,7 +255,6 @@
 
   </div>
 </div>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
