--- a/site/output/cimi-rest/cimi-rest-entry-point.html
+++ b/site/output/cimi-rest/cimi-rest-entry-point.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -116,7 +116,7 @@ A deltacloud server exposes the CIMI Cloud Entry Point at /cimi/cloudEntryPoint.
   <div class="span3">
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     CIMI REST API
   </li>
   <li><a href="../cimi-rest.html">Introduction</a></li>
@@ -127,15 +127,14 @@ A deltacloud server exposes the CIMI Cloud Entry Point at /cimi/cloudEntryPoint.
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
+<li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
       <li><a href="cimi-rest-collections.html">Machine</a></li>
       <li><a href="cimi-rest-volumes.html">Volume</a></li>
     </ul>
-  </li>
+</li>
 
 </ul>
-
-  </div>
+</div>
 
 </div>
 
@@ -192,7 +191,6 @@ Server: thin 1.5.0 codename Knife
   &lt;networkPortConfigs href="http://localhost:3001/cimi/network_port_configurations" /&gt;
 &lt;/CloudEntryPoint&gt;
 </pre>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
