--- a/site/output/cimi-rest/cimi-rest-resource-metadata.html
+++ b/site/output/cimi-rest/cimi-rest-resource-metadata.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -129,7 +129,7 @@ specific.
 
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     CIMI REST API
   </li>
   <li><a href="../cimi-rest.html">Introduction</a></li>
@@ -140,28 +140,25 @@ specific.
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
+<li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
       <li><a href="cimi-rest-collections.html">Machine</a></li>
       <li><a href="cimi-rest-volumes.html">Volume</a></li>
     </ul>
-  </li>
+</li>
   <hr>
-  <li class="nav-header">
+<li class="nav-header">
     Resource Metadata
   </li>
 
 </ul>
-
-  </div>
+</div>
 
 </div>
 
 <ul class="nav nav-pills">
-  <li class="active"><a href="#resource-metadata" data-toggle="tab">Retrieve the ResourceMetadata Collection</a></li>
+<li class="active"><a href="#resource-metadata" data-toggle="tab">Retrieve the ResourceMetadata Collection</a></li>
   <li><a href="#resource-metadata-capabilities" data-toggle="tab">ResourceMetadata Capabilities</a></li>
-</ul>
-
-<div class="tab-content">
+</ul><div class="tab-content">
   <div class="tab-pane active" id="resource-metadata">
 
 <h4>Retrieve the ResourceMetadata Collection</h4>
@@ -237,8 +234,7 @@ Server: thin 1.5.0 codename Knife
   <div class="tab-pane" id="resource-metadata-capabilities">
 
 <h4>ResourceMetadata Capabilities</h4>
-<br>
-<p>
+<br><p>
 <strong><em>
 The following table describes the capability URIs defined by this specification. Providers may define new
 URIs and it is recommended that these URIs be dereferencable such that Consumers can discover the
@@ -256,12 +252,9 @@ associated with the Cloud Entry Point resource (in case a capability would apply
 CloudEntryPoint resource itself, its definition would say so).
 </em></strong>
 </p>
-<br>
-
-<table class="table-bordered table-striped table-condensed">
-  <thead>
-    <tr>
-      <th>
+<br><table class="table-bordered table-striped table-condensed">
+<thead><tr>
+<th>
         Resource Name
       </th>
       <th>
@@ -270,18 +263,17 @@ CloudEntryPoint resource itself, its definition would say so).
       <th>
         Description
       </th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>CloudEntryPoint  </td>
+    </tr></thead>
+<tbody>
+<tr>
+<td>CloudEntryPoint  </td>
       <td>ExpandParameter  </td>
       <td> Indicated whether the $expand query parameter is
 supported by the Provider.
 </td>
     </tr>
-    <tr>
-      <td>CloudEntryPoint
+<tr>
+<td>CloudEntryPoint
  </td>
       <td>FilterParameter
  </td>
@@ -289,8 +281,8 @@ supported by the Provider.
 supported by the Provider.
  </td>
     </tr>
-    <tr>
-      <td>CloudEntryPoint
+<tr>
+<td>CloudEntryPoint
  </td>
       <td>firstParameter
  </td>
@@ -299,8 +291,8 @@ are supported by the Provider. Note that either both
 shall be supported or neither shall be supported.
  </td>
     </tr>
-    <tr>
-      <td>CloudEntryPoint
+<tr>
+<td>CloudEntryPoint
  </td>
       <td>SelectParameter
  </td>
@@ -308,8 +300,8 @@ shall be supported or neither shall be supported.
 supported by the Provider.
  </td>
     </tr>
-    <tr>
-      <td>System
+<tr>
+<td>System
  </td>
       <td>SystemComponentTemplateByValue
  </td>
@@ -317,8 +309,8 @@ supported by the Provider.
 Component Templates by-value in SystemTemplates.
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>DefaultInitialState
  </td>
@@ -326,8 +318,8 @@ Component Templates by-value in SystemTemplates.
 will be unless explicitly set by the "initialState" attribute
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>InitialStates
  </td>
@@ -336,8 +328,8 @@ Consumer may choose from when creating a new
 Machine.
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>MachineConfigByValue
  </td>
@@ -347,8 +339,8 @@ true the MachineTemplateByValue capability shall also
 be specified with a value of true.
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>MachineCredentialByValue
  </td>
@@ -358,8 +350,8 @@ the MachineTemplateByValue capability shall also be
 specified with a value of true.
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>MachineImageByValue
  </td>
@@ -369,8 +361,8 @@ the MachineTemplateByValue capability shall also be
 specified with a value of true.
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>MachineVolumeTemplatesByValue
  </td>
@@ -380,8 +372,8 @@ operations. If true the MachineTemplateByValue
 capability shall also be specified with a value of true.
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>MachineStopForce
  </td>
@@ -389,8 +381,8 @@ capability shall also be specified with a value of true.
 "force" option on the stop and restart operations.
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>MachineStopForceDefault
  </td>
@@ -401,8 +393,8 @@ of "false," which indicates that the Provider will attempt
 to gracefully stop the Machine.
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>RestoreFromImage
  </td>
@@ -411,8 +403,8 @@ from Machine Images that are not SNAPSHOT Machine
 Images.
  </td>
     </tr>
-    <tr>
-      <td>Machine
+<tr>
+<td>Machine
  </td>
       <td>UserData
  </td>
@@ -420,8 +412,8 @@ Images.
 See 5.14.1 for more information.
  </td>
     </tr>
-    <tr>
-      <td>Credential
+<tr>
+<td>Credential
  </td>
       <td>CredentialTemplateByValue
  </td>
@@ -430,8 +422,8 @@ Credential Templates by-value in Credential create
 operations.
  </td>
     </tr>
-    <tr>
-      <td>Volume
+<tr>
+<td>Volume
  </td>
       <td>SharedVolumeSupport
  </td>
@@ -440,8 +432,8 @@ volume resources across Machines. The value specified
 is of type "boolean."
  </td>
     </tr>
-    <tr>
-      <td>Volume
+<tr>
+<td>Volume
  </td>
       <td>VolumeConfigByValue
  </td>
@@ -451,8 +443,8 @@ If true, the VolumeTemplateByValue capability shall
 also be specified with a value of true.
  </td>
     </tr>
-    <tr>
-      <td>Volume
+<tr>
+<td>Volume
  </td>
       <td>VolumeImageByValue
  </td>
@@ -462,8 +454,8 @@ the VolumeTemplateByValue capability shall also be
 specified with a value of true.
  </td>
     </tr>
-    <tr>
-      <td>Volume
+<tr>
+<td>Volume
  </td>
       <td>VolumeSnapshot
  </td>
@@ -471,8 +463,8 @@ specified with a value of true.
 VolumeImage by referencing an existing Volume.
  </td>
     </tr>
-    <tr>
-      <td>Volume
+<tr>
+<td>Volume
  </td>
       <td>VolumeTemplateByValue
  </td>
@@ -480,8 +472,8 @@ VolumeImage by referencing an existing Volume.
 Templates by-value in Volume create operations.
  </td>
     </tr>
-    <tr>
-      <td>Network
+<tr>
+<td>Network
  </td>
       <td>NetworkConfigByValue
  </td>
@@ -490,8 +482,8 @@ Configurations by-value in the Network create
 operation.
  </td>
     </tr>
-    <tr>
-      <td>Network
+<tr>
+<td>Network
  </td>
       <td>NetworkTemplateByValue
  </td>
@@ -499,8 +491,8 @@ operation.
 Templates by-value in the Network create operation.
  </td>
     </tr>
-    <tr>
-      <td>NetworkPort
+<tr>
+<td>NetworkPort
  </td>
       <td>NetworkPortConfigByValue
  </td>
@@ -509,8 +501,8 @@ NetworkPort Configurations by-value in the NetworkPort
 create operation.
  </td>
     </tr>
-    <tr>
-      <td>NetworkPort
+<tr>
+<td>NetworkPort
  </td>
       <td>NetworkPortTemplateByValue
  </td>
@@ -519,8 +511,8 @@ NetworkPort Templates by-value in the NetworkPort
 create operation.
  </td>
     </tr>
-    <tr>
-      <td>ForwardingGroup
+<tr>
+<td>ForwardingGroup
  </td>
       <td>MixedNetwork
  </td>
@@ -528,8 +520,8 @@ create operation.
 private and public connection at the same time.
  </td>
     </tr>
-    <tr>
-      <td>Job
+<tr>
+<td>Job
  </td>
       <td>JobRetention
  </td>
@@ -541,8 +533,8 @@ minutes (e.g., 30 min). The value specified is of type
 "integer."
  </td>
     </tr>
-    <tr>
-      <td>Meter
+<tr>
+<td>Meter
  </td>
       <td>MeterConfigByValue
  </td>
@@ -551,8 +543,8 @@ MeterConfigurations by-value in the Meter create
 operation.
  </td>
     </tr>
-    <tr>
-      <td>Meter
+<tr>
+<td>Meter
  </td>
       <td>MeterTemplateByValue
  </td>
@@ -560,8 +552,8 @@ operation.
 Templates by-value in the Meter create operation.
  </td>
     </tr>
-    <tr>
-      <td>EventLog
+<tr>
+<td>EventLog
  </td>
       <td>Linked
  </td>
@@ -570,12 +562,10 @@ are associated with resources when the resource is
 deleted.
  </td>
     </tr>
-  </tbody>
+</tbody>
 </table>
-
-  </div>
 </div>
-
+</div>
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
