--- a/site/output/cimi-rest/cimi-rest-volumes.html
+++ b/site/output/cimi-rest/cimi-rest-volumes.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -115,7 +115,7 @@ A Volume Collection resource represents the collection of Volumes within a Provi
 
 
 <ul class="nav nav-list well">
-  <li class="nav-header">
+<li class="nav-header">
     CIMI REST API
   </li>
   <li><a href="../cimi-rest.html">Introduction</a></li>
@@ -126,38 +126,32 @@ A Volume Collection resource represents the collection of Volumes within a Provi
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
+<li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
       <li><a href="cimi-rest-collections.html">Machine</a></li>
       <li><a href="cimi-rest-volumes.html">Volume</a></li>
     </ul>
-  </li>
+</li>
   <hr>
-  <li class="nav-header">
+<li class="nav-header">
     Volume Resources
   </li>
   <ul class="nav nav-list">
-    <li class="active"><a href="cimi-rest-volumes.html">Volume</a></li>
+<li class="active"><a href="cimi-rest-volumes.html">Volume</a></li>
     <li><a href="cimi-rest-volume-images.html">VolumeImage</a></li>
     <li><a href="cimi-rest-volume-configs.html">VolumeConfiguration</a></li>
     <li><a href="cimi-rest-volume-templates.html">VolumeTemplate</a></li>
   </ul>
-
 </ul>
-
-  </div>
+</div>
 
 </div>
 
 <ul class="nav nav-pills">
-  <li class="active"><a href="#volume-collection" data-toggle="tab">Retrieve the Volume Collection</a></li>
+<li class="active"><a href="#volume-collection" data-toggle="tab">Retrieve the Volume Collection</a></li>
   <li><a href="#single-volume" data-toggle="tab">Retrieve a single Volume</a></li>
   <li><a href="#create-volume" data-toggle="tab">Create a Volume</a></li>
   <li><a href="#delete-volume" data-toggle="tab">Delete a Volume</a></li>
-</ul>
-
-<hr>
-
-<div class="tab-content">
+</ul><hr><div class="tab-content">
   <div class="tab-pane active" id="volume-collection">
 
 <h4>Retrieve the Volume Collection</h4>
@@ -320,8 +314,7 @@ Server: thin 1.5.0 codename Knife
 &lt;/Volume&gt;
 </pre>
 
-<br>
-<p>Using VolumeTemplate with VolumeConfiguration by value - Example request:</p>
+<br><p>Using VolumeTemplate with VolumeConfiguration by value - Example request:</p>
 <pre>
 POST /cimi/volumes HTTP/1.1
 Authorization: Basic bW9ja3VzZXI6bW9ja3Bhc3N3b3Jk
@@ -404,7 +397,6 @@ Server: thin 1.5.0 codename Knife
   </div>
 
 </div>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
