--- a/site/output/download.html
+++ b/site/output/download.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -109,10 +109,9 @@
   signatures from our <a href="http://www.apache.org/dist/deltacloud/">main distribution directory</a>.
 </p>
 <h3 id="mirrors">Current release</h3>
-<table class="table">
-  <tbody>
-    <tr>
-      <td><strong>server-gem</strong></td>
+<table class="table"><tbody>
+<tr>
+<td><strong>server-gem</strong></td>
       <td>
         <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.gem">deltacloud-core-1.1.1.gem</a>
         (
@@ -122,8 +121,8 @@
         )
       </td>
     </tr>
-    <tr>
-      <td><strong>server-sources</strong></td>
+<tr>
+<td><strong>server-sources</strong></td>
       <td>
         <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.1.1.tgz">deltacloud-core-1.1.1.tgz</a>
         (
@@ -133,8 +132,8 @@
         )
       </td>
     </tr>
-    <tr>
-      <td><strong>client-gem</strong></td>
+<tr>
+<td><strong>client-gem</strong></td>
       <td>
         <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.gem">deltacloud-client-1.1.1.gem</a>
         (
@@ -144,8 +143,8 @@
         )
       </td>
     </tr>
-    <tr>
-      <td><strong>client-sources</strong></td>
+<tr>
+<td><strong>client-sources</strong></td>
       <td>
         <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.1.1.tgz">deltacloud-client-1.1.1.tgz</a>
         (
@@ -155,9 +154,7 @@
         )
       </td>
     </tr>
-  </tbody>
-</table>
-<p></p>
+</tbody></table><p></p>
 <h4 id="archive">Old releases</h4>
 <p>
   Older releases of Apache Deltacloud can be found <a href="http://archive.apache.org/dist/deltacloud/">here</a>. We highly recommend to <b>not use</b>
@@ -206,7 +203,6 @@ $ pgp deltacloud-core-1.1.1.tar.gz.asc
 $ gpg --import KEYS
 $ gpg --verify deltacloud-core-1.1.1.tar.gz.asc
 </pre>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
