--- a/site/output/how-to-contribute.html
+++ b/site/output/how-to-contribute.html
@@ -44,7 +44,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/about.html">What is Deltacloud?</a></li>
-      <li><a href="/supported-providers.html">Supported Providers</a></li>
+      <li><a href="/drivers.html#drivers">Supported Providers</a></li>
     </ul>
   </li>
   <li><a href="/download.html">Download</a></li>
@@ -103,7 +103,7 @@
 <h4 id="how">How can I contribute?</h4>
 
 <ul class="nav nav-list">
-  <li class="nav-header">
+<li class="nav-header">
   </li>
 <li>
     <a href="send-patch.html">Send a patch</a>
@@ -120,9 +120,7 @@
   <li>
     <a href="#documentation">Write documentation</a>
   </li>
-</ul>
-
-<p><br></p>
+</ul><p><br></p>
 
 <h3>Overview of the Deltacloud directory structure</h3>
 
@@ -181,7 +179,6 @@ deltacloud
 
 <h3 id="documentation">Writing documentation</h3>
 <p>You can also contribute with a piece of documentation. There are still things which needs to be described. If you found one like that and you are interested in writing a couple of sentences about the particular issue, please, don’t hesitate to do it and <a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/">send us</a> your contribution. We really appreciate your help.</p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
